namespaces/live.cloud-platform.service.justice.gov.uk/laa-crime-claims-forms-adapter-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-crime-claims-forms-adapter-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-non-standard-crime-claims"
    cloud-platform.justice.gov.uk/application: "laa-crime-claims-adapter"
    cloud-platform.justice.gov.uk/owner: "Non Standard Crime Claims: CRM457@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/test"
    cloud-platform.justice.gov.uk/team-name: "crm7team"
    cloud-platform.justice.gov.uk/review-after: "2024-01-03"
